# daedalus

./: .env.example  .gitignore  Cargo.toml  askama.toml  build.rs  cspell.json  daedalus.toml  diesel.toml  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tsconfig.json  vite.config.js
.cargo/: config.toml  tsync.rs
api/: .env.example  Cargo.toml
api/migrations/2023-12-28-190020_create_users/: down.sql  up.sql
api/migrations/2024-03-20-235715_add_name_to_users_table/: down.sql  up.sql
api/src/: config.rs  defaults.rs  lib.rs  main.rs  result.rs  routes.rs  server.rs  tenants.rs  users.rs  workflows.rs
api/src/api/: mod.rs  tenants.rs  users.rs  workflows.rs
api/src/database/: pool.rs  schema.rs
api/src/handlers/: tenants.rs  users.rs  workflows.rs
api/src/middleware/: bearer.rs
api/src/models/: mod.rs
api/src/services/: tenants.rs
app/: tailwind.config.ts
app/src/app/: WorkflowEditor.tsx  layout.tsx  page.tsx  utils.ts
app/src/catalyst/: alert.tsx  avatar.tsx  button.tsx  dropdown.tsx
app/src/components/: PageOrientationIcon.tsx
config/: settings.toml
daedalus-api/: Cargo.toml
daedalus-api/src/: http.rs  main.rs  result.rs
daedalus-api/src/tenants/: handlers.rs  models.rs
daedalus-api/src/users/: handlers.rs  models.rs
daedalus-core/: Cargo.toml
daedalus-core/src/: lib.rs  result.rs  tenants.rs  users.rs
daedalus-data/: Cargo.toml
daedalus-data/migrations/2023-12-28-184047_create_tenants/: down.sql  up.sql
daedalus-data/migrations/2023-12-28-190020_create_users/: down.sql  up.sql
daedalus-data/src/: database.rs  lib.rs  result.rs  schema.rs  tenants.rs  users.rs
daedalus-web/: package.json  tailwind.config.ts
daedalus-web/src/: auth.ts
daedalus-web/src/app/: page.tsx
daedalus-web/src/catalyst/: checkbox.tsx  dialog.tsx  link.tsx  listbox.tsx  pagination.tsx  switch.tsx
migrations/2023-12-28-184047_create_tenants/: down.sql  up.sql
migrations/2023-12-30-155011_create_workflow_tables/: down.sql  up.sql
public/: style.css
resource/assets/: style.css
resource/templates/home/: page.njk
resource/templates/layouts/: default.njk
resource/templates/macros/: logo.njk  nav.njk
resource/templates/pages/: home.njk  index.njk
resources/css/: app.css
resources/js/: app.js
resources/templates/layouts/: default.njk
resources/templates/pages/: login.njk  register.njk  vite.njk
resources/ts/: App.jsx  MyComponent.tsx  app.tsx
resources/ts/components/: avatar.tsx  badge.tsx  button.tsx  fieldset.tsx  input.tsx  link.tsx  select.tsx
resources/ts/types/: rust.d.ts
scripts/: dev-setup  seed
spa/: package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
spa/src/app/: WorkflowEditor.tsx  WorkflowState.tsx  WorkflowTransition.tsx  globals.css  layout.tsx  page.tsx  utils.ts
spa/src/catalyst/: badge.tsx  radio.tsx
spa/src/types/: rust.d.ts
src/: config.rs  embedded.rs  lib.rs  main.rs  result.rs  routes.rs  server.rs  tmpl.rs  views.rs
src/database/: migrator.rs  mod.rs  pool.rs  schema.rs
src/handlers/: tenants.rs  users.rs  workflows.rs
src/handlers/api/: users.rs  (+2 more)
src/middleware/: flash_messages.rs  mod.rs  session.rs
src/models/: common.rs  defaults.rs  mod.rs  tenants.rs  users.rs  workflows.rs
src/services/: mod.rs  tenants.rs  users.rs  workflows.rs
src/tmpl/: vite.rs
static/: modal.js
templates/layouts/: default.njk
templates/pages/: index.njk  login.njk
views/: index.hbs  layout.hbs
views/layouts/: default.j2
views/pages/: home.njk  index.j2  index.njk  login.njk
(+19 files in other folders)
