[package]
name = "daedalus"
version = "0.1.0"
edition = "2021"
default-run = "server"

[dependencies]
actix-identity = "0.7.0"
actix-session = { version = "0.9.0", features = ["cookie-session"] }
actix-web = "4"
argon2 = "0.5.2"
askama = { version = "0.12.1", features = ["with-actix-web"] }
askama_actix = "0.14.0"
chrono = { version = "0.4.31", features = ["serde"] }
config = "0.14.0"
derive_more = "0.99.17"
diesel = { version = "2.1.0", features = [
  "chrono",
  "postgres",
  "postgres_backend",
  "r2d2",
  "serde_json",
  "uuid",
] }
diesel_migrations = "2.1.0"
dotenvy = "0.15.7"
glob = "0.3.1"
simplelog = "0.12.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_with = { version = "3.6.0", features = ["chrono"] }
tracing-actix-web = "0.7.9"
tsync = "2.1.0"
uuid = { version = "1.6.1", features = ["serde", "v7"] }

[[bin]]
name = "tsync"
path = ".cargo/tsync.rs"
