[package]
name = "daedalus"
version = "0.1.0"
edition = "2021"
default-run = "daedalus"

[dependencies]
actix-identity = "0.7.0"
actix-session = { version = "0.9.0", features = ["cookie-session"] }
actix-web = "4"
argon2 = "0.5.2"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.5.1", features = ["derive"] }
config = "0.14.0"
console = "0.15.8"
derive_more = "0.99.17"
diesel = { version = "2.1.0", features = [
  "chrono",
  "postgres",
  "postgres_backend",
  "r2d2",
  "serde_json",
  "uuid",
] }
diesel_migrations = "2.1.0"
glob = "0.3.1"
jsonwebtoken = "9.2.0"
rust-embed = { version = "8.2.0", features = ["mime-guess"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_with = { version = "3.6.0", features = ["chrono"] }
tera = "1.19.1"
tokio = { version = "1.36.0", features = ["signal", "macros"] }
tracing-actix-web = "0.7.9"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
tsync = "2.1.0"
uuid = { version = "1.6.1", features = ["serde", "v7"] }

[build-dependencies]
rand = "0.8.5"

[[bin]]
name = "tsync"
path = ".cargo/tsync.rs"
